# umads_697_data_medics

./: .gitignore  .python-version  README.md  README_topic_modeling.md  environment.yaml  pyproject.toml  requirements.txt  setup_local
blog_post/: blog.py
blog_post/blog_data/: action_tweets_data_sample.csv  classification_data_sample.csv  lda_coherence_results.csv  lda_earthquake_pyldavis.html  lda_fire_pyldavis.html  lda_flood_pyldavis.html  lda_hurricane_pyldavis.html  lda_top_sentence.csv  locations  log_liklihood_results.csv  train_data_sample.csv
data_medics_capstone/: pyproject.toml
docs/: README.md  content.md  explorations_catalog.md  future_evolution.md  nn_classification.md  nn_classification_zupan.md  project_intro.md  project_intro_zupan.md  recommended_actions.md  recommended_actions_zupan.md  topic_modeling.md  tweets_classification.md  tweets_comparative_analysis.md  tweets_individual_analysis.md
pipeline/: EDA_rjgillin.py  category_classification_models.py  compare_algorithms.py  disaster_binary.py  disaster_type_prediction.py  embedding_bag_nn.py  env.yaml  happy_path_exploration.py  locations.py  lstm.py  nn_classification_analysis.py  nn_models.py  pipeline.yaml  prepare_blog_data.py  recent_tweets.py  recommended_actions.py  recommended_actions_upstream.py  report.py  tokenization.py  tools.py  tools_rjg.py  tools_zupan.py  topic_modeling.py  topic_modeling_disaster_type.py  topic_modeling_disaster_type_final.py  topic_modeling_disaster_type_optimized.py  topic_modeling_disaster_type_results.py  topic_modeling_optimized.py  train_logistic_regression.py  tweets_timeline.py  tweets_timeline_compare.py  twitter_sample.py  twitter_sample_timeline.py  vectorizer.py  vectorizer_countVec.py  vectorizer_dense.py  vectorizer_spacy.py  vectorizer_svd.py  words_importance.py
pipeline/output/: category_classification_models.ipynb  dev_lemma_sents.csv  embedding_bag_nn.ipynb  happy_path_exploration.ipynb  lda_model_earthquake.pkl  lda_model_fire.pkl  lda_model_flood.pkl  lda_model_hurricane.pkl  lda_topics.csv  lda_topics_disaster_type.csv  vocab.pkl  (+22 more)
(+9 files in other folders)
