[tool.poetry]
name = "data-medics-capstone"
version = "0.0.1"
description = ""
authors = ["jtzupan@umich.edu", "rjgillin@umich.edu", "mbouss@umich.edu"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pytz = "^2021.1"
numpy = "^1.20.1"
pandas = "^1.3.3"
scikit-learn = "^1.0"
wordcloud = "^1.8.2"
bokeh = "^2.4.3"
torch = "1.11.0"
torchtext = "0.12.0"
scikit-plot = "^0.3.7"
streamlit = "^1.11.0"
pyLDAvis = "3.2.2"
altair-saver = "^0.5.0"
selenium = "^4.3.0"
chromedriver = "^2.24.1"
tmtoolkit = "^0.11.2"
altair_saver = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
black = "^22.1"
coverage = "^6.3.2"
Pygments = "^2.11.2"
matplotlib = "^3.4.2"
altair = "^4.0.1"
altair_viewer = "^0.2.0"
hdbscan = "^0.8.27"
pylint = "^2.12.2"
seaborn = "^0.11"
ipython = "*"
jupyter = "*"
ipykernel = "*"
ploomber = "*"
nltk = "*"
textstat = "*"
spacy = "3.3.1"
geopandas = "*"
geopy = "*"
folium = "*"
gensim = "*"
lime = "*"
tweepy = "*"
compound-word-splitter = "^0.4"
pyenchant = "^3.2.2"
nx_altair = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
